--- a/views/home.html
+++ b/views/home.html
@@ -1,19 +1,29 @@
 <body>
-  <!-- <div class="homecon">
-    <div class="back">
 
-    </div> -->
-    <div id="about" class="sec1 sec">
+    <div id="top" class="sec1 sec">
       <h1>About</h1>
     </div>
     <div id="skills" class="sec2 sec">
       <h1>SKILLS</h1>
       <div class="skillsbox">
-        <ul></ul>
+          <ul><i class="devicon-angularjs-plain-wordmark"></i></ul>
+          <ul><i class="devicon-atom-original-wordmark"></i></ul>
+          <ul><i class="devicon-express-original-wordmark"></i></ul>
+          <ul><i class="devicon-html5-plain-wordmark"></i></ul>
+          <ul><i class="devicon-javascript-plain"></i></ul>
+          <ul><i class="devicon-jquery-plain-wordmark"></i></ul>
+          <ul><i class="devicon-mongodb-plain-wordmark"></i></ul>
+          <ul><i class="devicon-postgresql-plain-wordmark"></i></ul>
+          <ul><i class="devicon-nodejs-plain-wordmark"></i></ul>
       </div>
     </div>
     <div id="projects" class="sec3 sec">
       <h1>Projects</h1>
+      <div class="projcon">
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
+      </div>
     </div>
     <div id="education" class="sec4 sec">
       <h1>Education</h1>
