--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,8 @@
 <body>
-
-    <div id="top" class="sec1 sec">
+    <div id="top" class="sec">
+      <h1>Sergio Barker</h1>
+    </div>
+    <div id="about" class="sec1 sec">
       <h1>About</h1>
     </div>
     <div id="skills" class="sec2 sec">
