--- a/views/home.html
+++ b/views/home.html
@@ -17,6 +17,11 @@
           <ul><i class="devicon-mongodb-plain-wordmark"></i></ul>
           <ul><i class="devicon-postgresql-plain-wordmark"></i></ul>
           <ul><i class="devicon-nodejs-plain-wordmark"></i></ul>
+          <ul><i class="devicon-css3-plain-wordmark"></i></ul>
+          <ul><i class="devicon-gulp-plain"></i></ul>
+          <!-- <ul></ul>
+          <ul></ul>
+          <ul></ul> -->
       </div>
     </div>
     <div id="projects" class="sec3 sec">
