--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,9 @@
 <body>
     <div id="top" class="sec">
-      <h1>Sergio Barker</h1>
+      <div class="container">
+        <h1>Sergio Barker</h1>
+        <h1>Web Devloper</h1>
+      </div>
     </div>
     <div id="about" class="sec1 sec">
       <h1>About</h1>
