--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,7 +83,6 @@ header {
   margin: auto;
 }
 
-
 h1 {
   font-family: sans-serif;
   color: white;
@@ -92,14 +91,32 @@ h1 {
   display: table-cell;
   vertical-align: middle;
 }
+
 #top {
   height: 100vh;
   width: 100%;
   background-image: url("./imgs/mike-dennler-159405.jpg");
   background-size: cover;
-  display: table;
+  display: flex;
   background-attachment: fixed;
 }
+
+.container h1 {
+  width: 350px;
+  margin: auto;
+}
+
+.container {
+  height: auto;
+  width: 25px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  vertical-align: middle;
+  border: 2px solid white;
+  border-radius: 15px;
+}
+
 #about {
   height: 100vh;
   width: 100%;
