--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
     <div id="top" class="sec">
       <div class="container">
         <h1>Sergio Barker</h1>
+        <h1><hr></h1>
         <h1>Web Devloper</h1>
       </div>
     </div>
@@ -30,9 +31,18 @@
     <div id="projects" class="sec3 sec">
       <h1>Projects</h1>
       <div class="projcon">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project">
+          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="starwars" class="projimg"><div class="projcover"></div></div></a>
+          <h1>Star Wars Planets</h1>
+        </div>
+        <div class="project">
+          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="subaru" class="projimg"><div class="projcover"></div></div></a>
+          <h1>Subaru clone</h1>
+        </div>
+        <div class="project">
+          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
+          <h1>RockshowZ</h1>
+        </div>
       </div>
     </div>
     <div id="education" class="sec4 sec">
