--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,11 +8,12 @@ body {
 }
 
 header {
-  height: 75px;
+  height: 65px;
   width: 100%;
   background-color: none;
   position: fixed;
-  z-index: 1
+  z-index: 1;
+  border-bottom: .5px solid white
 }
 
 .homecon {
@@ -95,7 +96,7 @@ h1 {
 #top {
   height: 100vh;
   width: 100%;
-  background-image: url("./imgs/mike-dennler-159405.jpg");
+  background-image: url("./imgs/timp1.jpg");
   background-size: cover;
   display: flex;
   background-attachment: fixed;
@@ -107,29 +108,34 @@ h1 {
 }
 
 .container {
-  height: auto;
-  width: 25px;
-  margin: auto;
+  height: 150px;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  vertical-align: middle;
-  border: 2px solid white;
+  position: relative;
+  margin: auto;
+  background-color: black;
   border-radius: 15px;
+  opacity: .9;
 }
 
 #about {
-  height: 100vh;
+  height: 50vh;
   width: 100%;
-  background-image: url("./imgs/snowytimp.jpg");
+  /*background-image: url("./imgs/snowytimp.jpg");*/
+  background-color: #29b6f6;
+  color: black;
   background-size: cover;
   display: table;
   background-attachment: fixed;
 }
 
 #skills {
-  height: 100vh;
+  height: 55vh;
   width: 100%;
-  background-image: url("./imgs/timp1.jpg");
+  /*background-image: url("./imgs/timp1.jpg");*/
+  background-color: white;
+  color: black;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -153,6 +159,7 @@ h1 {
   height: auto;
   width: auto;
   display: flex;
+  color: white;
   flex-direction: row;
   margin: 25px 25px;
 }
@@ -171,11 +178,27 @@ i {
 #projects {
   height: 100vh;
   width: 100%;
-  background-image: url("./imgs/morning_mount_timpanogos-wallpaper-1920x1080.jpg");
+  background-image: url("./imgs/Mount_Timpanogos.jpg");
   background-size: cover;
   display: flex;
   flex-direction: column;
   background-attachment: fixed;
+}
+
+#projects h1 {
+  margin-top: 100px
+}
+
+#starwars {
+  background-image: url("./imgs/starwars.png");
+}
+
+#subaru {
+  background-image: url("./imgs/starwars.png");
+}
+
+#rockshowZ {
+  background-image: url("./imgs/starwars.png");
 }
 
 .projcon {
@@ -192,16 +215,42 @@ i {
   width: 27vw;
   margin: auto;
   display: flex;
-  flex-direction: row;
-  border-radius: 15px;
+  flex-direction: column;
   background-color: black;
   opacity: .9;
+  border-radius: 15px
+}
+
+.project a {
+  margin: 10% auto;
+  height: 300px;
+  width: 100%;
+}
+
+.projimg {
+  height: 300px;
+  width: 100%;
+  background-size: 100%;
+  background: cover;
+}
+
+.projcover {
+  height: 300px;
+  width: 27vw;
+  background-color: white;
+  z-index: 3;
+  position: absolute;
+  opacity: 0;
+}
+
+.projcover:hover {
+  opacity: .3
 }
 
 #education {
   height: 100vh;
   width: 100%;
-  background-image: url("./imgs/Mount_Timpanogos.jpg");
+  background-image: url("./imgs/forest.jpg");
   background-size: cover;
   display: table;
   background-attachment: fixed;
