--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,10 +7,10 @@ body {
   padding: 0;
 }
 
-header {
+nav {
   height: 65px;
   width: 100%;
-  background-color: none;
+  background-color: white;
   position: fixed;
   z-index: 1;
   border-bottom: .5px solid white
@@ -36,7 +36,7 @@ header {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  color: white
+  color: black
 }
 
 .home h1:hover {
@@ -72,7 +72,7 @@ header {
   font-family: sans-serif;
   font-size: 16px;
   font-weight: bold;
-  color: white;
+  color: black;
   text-align: center;
 }
 
