--- a/views/home.html
+++ b/views/home.html
@@ -36,17 +36,25 @@
           <h1>Star Wars Planets</h1>
         </div>
         <div class="project">
-          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="subaru" class="projimg"><div class="projcover"></div></div></a>
+          <a href="http://138.68.60.37:8083"><div id="subaru" class="projimg"><div class="projcover"></div></div></a>
           <h1>Subaru clone</h1>
         </div>
         <div class="project">
-          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
+          <a href="http://rockshowz.info/"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
           <h1>RockshowZ</h1>
         </div>
       </div>
     </div>
-    <div id="education" class="sec4 sec">
-      <h1>Education</h1>
+    <div id="contact" class="sec4 sec">
+      <h1>Contact</h1>
+      <div class="projcon">
+      <h2>Phone</h2>
+      <p>801-358-3800</p>
+      <h2>email</h2>
+      <p>sbrycebarker@gmail.com</p>
+      <h2>GitHub</h2>
+      <a href="https://github.com/sbrycebarker">Sbrycebarker</a>
+      </div>
     </div>
 
   </div>
