--- a/views/home.html
+++ b/views/home.html
@@ -46,11 +46,10 @@
       </div>
     </div>
     <div id="contact" class="sec4 sec">
-      <h1>Contact</h1>
-      <div class="projcon">
+      <div class="contcon">
       <h2>Phone</h2>
       <p>801-358-3800</p>
-      <h2>email</h2>
+      <h2>Email</h2>
       <p>sbrycebarker@gmail.com</p>
       <h2>GitHub</h2>
       <a href="https://github.com/sbrycebarker">Sbrycebarker</a>
