--- a/styles/styles.css
+++ b/styles/styles.css
@@ -248,12 +248,27 @@ i {
 }
 
 #contact {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   background-image: url("./imgs/forest.jpg");
+  background-color: white;
   background-size: cover;
-  display: table;
+  display: flex;
+  flex-direction: column;
   background-attachment: fixed;
+}
+
+.contcon {
+  height: auto;
+  width: 50%;
+  padding: 50px;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  background-color: black;
+  border-radius: 15px;
+  opacity: .9;
+  justify-content: center;
 }
 
 .sec {
