--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,13 @@ nav {
   width: 100%
 }
 
+.titles {
+  font-size: 50px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+
 .home {
   height: 75px;
   width: 200px;
@@ -72,25 +79,15 @@ nav {
   font-family: sans-serif;
   font-size: 16px;
   font-weight: bold;
-  color: black;
+  color: white;
   text-align: center;
 }
 
 .headeritem h2:hover {
   color: grey;
-  font-size: 18px;
-  transition: font-size;
+  transition: color;
   transition-duration: .5s;
   margin: auto;
-}
-
-h1 {
-  font-family: sans-serif;
-  color: white;
-  font-size: 50px;
-  text-align: center;
-  display: table-cell;
-  vertical-align: middle;
 }
 
 #top {
@@ -122,24 +119,24 @@ h1 {
 #about {
   height: 50vh;
   width: 100%;
-  /*background-image: url("./imgs/snowytimp.jpg");*/
   background-color: #29b6f6;
   color: black;
   background-size: cover;
   display: table;
   background-attachment: fixed;
+  border-bottom: 2px solid #222
 }
 
 #skills {
   height: 55vh;
   width: 100%;
-  /*background-image: url("./imgs/timp1.jpg");*/
   background-color: white;
   color: black;
   background-size: cover;
   display: flex;
   flex-direction: column;
   background-attachment: fixed;
+  border-bottom: 2px solid #222
 }
 
 .skillsbox {
@@ -183,10 +180,11 @@ i {
   display: flex;
   flex-direction: column;
   background-attachment: fixed;
+  border-bottom: 2px solid #222
 }
 
 #projects h1 {
-  margin-top: 100px
+  margin: auto;
 }
 
 #starwars {
@@ -205,7 +203,6 @@ i {
   height: 75vh;
   width: 90%;
   margin: auto;
-  /*border: 1px solid white;*/
   display: flex;
   flex-direction: row;
 }
@@ -218,7 +215,8 @@ i {
   flex-direction: column;
   background-color: black;
   opacity: .9;
-  border-radius: 15px
+  border-radius: 15px;
+  color: white;
 }
 
 .project a {
@@ -237,7 +235,7 @@ i {
 .projcover {
   height: 300px;
   width: 27vw;
-  background-color: white;
+  /*background-color: white;*/
   z-index: 3;
   position: absolute;
   opacity: 0;
@@ -250,7 +248,6 @@ i {
 #contact {
   height: 90vh;
   width: 100%;
-  background-image: url("./imgs/forest.jpg");
   background-color: white;
   background-size: cover;
   display: flex;
