--- a/views/home.html
+++ b/views/home.html
@@ -7,10 +7,10 @@
       </div>
     </div>
     <div id="about" class="sec1 sec">
-      <h1>About</h1>
+      <h1 class="titles">About</h1>
     </div>
     <div id="skills" class="sec2 sec">
-      <h1>SKILLS</h1>
+      <h1 class="titles">SKILLS</h1>
       <div class="skillsbox">
           <ul><i class="devicon-angularjs-plain-wordmark"></i></ul>
           <ul><i class="devicon-atom-original-wordmark"></i></ul>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div id="projects" class="sec3 sec">
-      <h1>Projects</h1>
+      <h1 class="titles">Projects</h1>
       <div class="projcon">
         <div class="project">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="starwars" class="projimg"><div class="projcover"></div></div></a>
@@ -46,6 +46,7 @@
       </div>
     </div>
     <div id="contact" class="sec4 sec">
+      <h1 class="titles" style="color: black;">Contact</h1>
       <div class="contcon">
       <h2>Phone</h2>
       <p>801-358-3800</p>
