--- a/views/home.html
+++ b/views/home.html
@@ -48,14 +48,19 @@
     <div id="contact" class="sec4 sec">
       <h1 class="titles" style="color: black;">Contact</h1>
       <div class="contcon">
-      <h2>Phone</h2>
+      <div id="phone" class="det">
+        <h2>Phone</h2>
       <p>801-358-3800</p>
+      </div>
+      <div id="email" class="det">
       <h2>Email</h2>
       <p>sbrycebarker@gmail.com</p>
+      </div>
+      <div id="phone" class="det">
       <h2>GitHub</h2>
       <a href="https://github.com/sbrycebarker">Sbrycebarker</a>
       </div>
+      </div>
     </div>
 
-  </div>
 </body>
