--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,7 +246,7 @@ i {
 }
 
 #contact {
-  height: 90vh;
+  height: 80vh;
   width: 100%;
   background-color: white;
   background-size: cover;
@@ -268,6 +268,10 @@ i {
   justify-content: center;
 }
 
+.det {
+  margin: auto;
+  text-align: center;
+}
 .sec {
   border-bottom: 2px solid white;
   color: white;
