--- a/views/home.html
+++ b/views/home.html
@@ -8,6 +8,9 @@
     </div>
     <div id="about" class="sec1 sec">
       <h1 class="titles">About</h1>
+      <div class="aboutcon">
+      <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
+      </div>
     </div>
     <div id="skills" class="sec2 sec">
       <h1 class="titles">SKILLS</h1>
@@ -54,11 +57,15 @@
       </div>
       <div id="email" class="det">
       <h2>Email</h2>
-      <p>sbrycebarker@gmail.com</p>
+      <p><a href="mailto:sbrycebarker@gmail.com.com">sbrycebarker@gmail.com</a></p>
       </div>
-      <div id="phone" class="det">
+      <div id="github" class="det">
       <h2>GitHub</h2>
-      <a href="https://github.com/sbrycebarker">Sbrycebarker</a>
+      <p><a href="https://github.com/sbrycebarker">Sbrycebarker</a></p>
+      </div>
+      <div id="linkedin" class="det">
+      <h2>LinkedIn</h2>
+      <p><a href="https://www.linkedin.com/in/sergio-barker/">www.linkedin.com/in/sergio-barker</a></p>
       </div>
       </div>
     </div>
