--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,17 +114,43 @@ nav {
   background-color: black;
   border-radius: 15px;
   opacity: .9;
+  text-align: center;
 }
 
 #about {
-  height: 50vh;
+  height: 40vh;
   width: 100%;
   background-color: #29b6f6;
   color: black;
   background-size: cover;
-  display: table;
+  display: flex;
+  flex-direction: column;
   background-attachment: fixed;
-  border-bottom: 2px solid #222
+  border-bottom: 2px solid #222;
+  text-align: center;
+}
+
+.aboutcon {
+  height: 30%;
+  width: 30%;
+  background: white;
+  border-radius: 15px;
+  font-size: 20px;
+  margin: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.aboutcon p {
+  height: 20px;
+  width: 450px;
+  top: -5px;
+  margin: auto;
+  position: relative;
+  text-align: center;
 }
 
 #skills {
@@ -173,7 +199,7 @@ i {
 
 
 #projects {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   background-image: url("./imgs/Mount_Timpanogos.jpg");
   background-size: cover;
@@ -246,7 +272,7 @@ i {
 }
 
 #contact {
-  height: 80vh;
+  height: 60vh;
   width: 100%;
   background-color: white;
   background-size: cover;
@@ -262,10 +288,11 @@ i {
   margin: auto;
   display: flex;
   flex-direction: row;
-  background-color: black;
+  background-color: none;
   border-radius: 15px;
   opacity: .9;
   justify-content: center;
+  color: black
 }
 
 .det {
@@ -275,4 +302,8 @@ i {
 .sec {
   border-bottom: 2px solid white;
   color: white;
+}
+
+#linkedin {
+  position: relative;
 }
