--- a/views/home.html
+++ b/views/home.html
@@ -43,7 +43,7 @@
           <h1>Subaru clone</h1>
         </div>
         <div class="project">
-          <a href="http://rockshowz.info/"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
+          <a href="http://138.68.60.37:8081"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
           <h1>RockshowZ</h1>
         </div>
       </div>
