--- a/views/home.html
+++ b/views/home.html
@@ -35,15 +35,18 @@
       <h1 class="titles">Projects</h1>
       <div class="projcon">
         <div class="project">
-          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/"><div id="starwars" class="projimg"><div class="projcover"></div></div></a>
+          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
+            <div id="starwars" class="projimg"><div class="projcover"></div></div></a>
           <h1>Star Wars Planets</h1>
         </div>
         <div class="project">
-          <a href="http://138.68.60.37:8083"><div id="subaru" class="projimg"><div class="projcover"></div></div></a>
-          <h1>Subaru clone</h1>
+          <a href="http://138.68.60.37:8083">
+            <div id="subaru" class="projimg"><div class="projcover"></div></div></a>
+          <h1>Subaru Clone</h1>
         </div>
         <div class="project">
-          <a href="http://138.68.60.37:8081"><div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
+          <a href="http://138.68.60.37:8081">
+            <div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
           <h1>RockshowZ</h1>
         </div>
       </div>
