--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,12 +13,23 @@ nav {
   background-color: white;
   position: fixed;
   z-index: 1;
-  border-bottom: .5px solid white
+  border-bottom: .5px solid white;
+  color: #404040;
+}
+
+a:hover {
+  color: white;
+  background-color: none;
+}
+
+.navbar-inverse {
+    background-color: #404040;
+    border-color: #080808;
 }
 
 .homecon {
   height: 1000px;
-  width: 100%
+  width: 100%;
 }
 
 .titles {
@@ -43,7 +54,7 @@ nav {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
-  color: black
+  color: white;
 }
 
 .home h1:hover {
@@ -97,6 +108,7 @@ nav {
   background-size: cover;
   display: flex;
   background-attachment: fixed;
+  /*color: white*/
 }
 
 .container h1 {
@@ -120,7 +132,7 @@ nav {
 #about {
   height: 40vh;
   width: 100%;
-  background-color: #29b6f6;
+  background-color: #404040;
   color: black;
   background-size: cover;
   display: flex;
@@ -139,7 +151,7 @@ nav {
   margin: auto;
   text-align: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   vertical-align: middle;
 }
@@ -151,6 +163,15 @@ nav {
   margin: auto;
   position: relative;
   text-align: center;
+}
+
+.devicon-gulp-plain {
+  text-decoration: none;
+}
+
+.md {
+  height: 30px;
+  width: 40px;
 }
 
 #skills {
@@ -190,6 +211,7 @@ nav {
 .skillsbox ul:hover {
   transform: rotateY(360deg);
   transition-duration: 1s;
+  background-color: none;
 }
 
 i {
@@ -197,6 +219,10 @@ i {
   margin: auto;
 }
 
+i:hover {
+  text-decoration: none;
+  background-color: none
+}
 
 #projects {
   height: 90vh;
@@ -261,10 +287,18 @@ i {
 .projcover {
   height: 300px;
   width: 27vw;
-  /*background-color: white;*/
+  background-color: white;
   z-index: 3;
-  position: absolute;
   opacity: 0;
+  text-align: center;
+  display: flex;
+  vertical-align: middle;
+}
+
+.projcover h1 {
+  height: 100px;
+  width: 200px;
+  position: relative;
 }
 
 .projcover:hover {
