--- a/views/home.html
+++ b/views/home.html
@@ -10,22 +10,24 @@
       <h1 class="titles">About</h1>
       <div class="aboutcon">
       <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
+      <p><a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md"></a><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
+      <p></p>
       </div>
     </div>
     <div id="skills" class="sec2 sec">
       <h1 class="titles">SKILLS</h1>
       <div class="skillsbox">
-          <ul><i class="devicon-angularjs-plain-wordmark"></i></ul>
-          <ul><i class="devicon-atom-original-wordmark"></i></ul>
-          <ul><i class="devicon-express-original-wordmark"></i></ul>
-          <ul><i class="devicon-html5-plain-wordmark"></i></ul>
-          <ul><i class="devicon-javascript-plain"></i></ul>
-          <ul><i class="devicon-jquery-plain-wordmark"></i></ul>
-          <ul><i class="devicon-mongodb-plain-wordmark"></i></ul>
-          <ul><i class="devicon-postgresql-plain-wordmark"></i></ul>
-          <ul><i class="devicon-nodejs-plain-wordmark"></i></ul>
-          <ul><i class="devicon-css3-plain-wordmark"></i></ul>
-          <ul><i class="devicon-gulp-plain"></i></ul>
+          <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://atom.io/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-atom-original-wordmark"></i></a></ul>
+          <ul><a href="https://expressjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-express-original-wordmark"></i></a></ul>
+          <ul><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-html5-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.javascript.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-javascript-plain"></i></a></ul>
+          <ul><a href="https://jquery.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-jquery-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.mongodb.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-mongodb-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.postgresql.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-postgresql-plain-wordmark"></i></a></ul>
+          <ul><a href="https://nodejs.org/en/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nodejs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.w3schools.com/css/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-css3-plain-wordmark"></i></a></ul>
+          <ul><a href="https://gulpjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-gulp-plain"></i></a></ul>
           <!-- <ul></ul>
           <ul></ul>
           <ul></ul> -->
@@ -36,17 +38,17 @@
       <div class="projcon">
         <div class="project">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg"><div class="projcover"></div></div></a>
+            <div id="starwars" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
           <h1>Star Wars Planets</h1>
         </div>
         <div class="project">
           <a href="http://138.68.60.37:8083">
-            <div id="subaru" class="projimg"><div class="projcover"></div></div></a>
+            <div id="subaru" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
           <h1>Subaru Clone</h1>
         </div>
         <div class="project">
           <a href="http://138.68.60.37:8081">
-            <div id="rockshowZ" class="projimg"><div class="projcover"></div></div></a>
+            <div id="rockshowZ" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
           <h1>RockshowZ</h1>
         </div>
       </div>
