--- a/views/home.html
+++ b/views/home.html
@@ -57,18 +57,22 @@
       <h1 class="titles" style="color: black;">Contact</h1>
       <div class="contcon">
       <div id="phone" class="det">
+        <i class="fa fa-mobile" aria-hidden="true" style="font-size: 30px; color: grey"></i>
         <h2>Phone</h2>
-      <p>801-358-3800</p>
+      <p><a href="tel:+13174562564">801-358-3800</a></p>
       </div>
       <div id="email" class="det">
+        <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 30px; color: red"></i>
       <h2>Email</h2>
       <p><a href="mailto:sbrycebarker@gmail.com.com">sbrycebarker@gmail.com</a></p>
       </div>
       <div id="github" class="det">
+        <i class="fa fa-github" aria-hidden="true" style="font-size: 30px;"></i>
       <h2>GitHub</h2>
       <p><a href="https://github.com/sbrycebarker">Sbrycebarker</a></p>
       </div>
       <div id="linkedin" class="det">
+        <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 30px; color: #0073B1;"></i>
       <h2>LinkedIn</h2>
       <p><a href="https://www.linkedin.com/in/sergio-barker/">www.linkedin.com/in/sergio-barker</a></p>
       </div>
