--- a/views/home.html
+++ b/views/home.html
@@ -33,8 +33,7 @@
           <ul></ul> -->
       </div>
     </div>
-    <div id="projects" class="sec3 sec" data-offset="200px">
-      <!-- <img class="proback"> -->
+    <div id="projects" class="sec3 sec">
       <h1 class="titles">Projects</h1>
       <div class="projcon">
         <div class="project">
