--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,6 @@
 <body>
     <div id="top" class="sec">
-      <div class="container">
+      <div class="namepos">
         <h1>Sergio Barker</h1>
         <h1><hr></h1>
         <h1>Web Devloper</h1>
@@ -38,18 +38,18 @@
       <div class="projcon">
         <div class="project">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
-          <h1>Star Wars Planets</h1>
+            <div id="starwars" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+          <h1 class="pronam">Star Wars Planets</h1>
         </div>
         <div class="project">
           <a href="http://138.68.60.37:8083">
-            <div id="subaru" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
-          <h1>Subaru Clone</h1>
+            <div id="subaru" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+          <h1 class="pronam">Subaru Clone</h1>
         </div>
         <div class="project">
           <a href="http://138.68.60.37:8081">
-            <div id="rockshowZ" class="projimg"><div class="projcover"><h1>GO TO PROJECT</h1></div></div></a>
-          <h1>RockshowZ</h1>
+            <div id="rockshowZ" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+          <h1 class="pronam">RockshowZ</h1>
         </div>
       </div>
     </div>
