--- a/views/home.html
+++ b/views/home.html
@@ -36,19 +36,19 @@
     <div id="projects" class="sec3 sec">
       <h1 class="titles">Projects</h1>
       <div class="projcon">
-        <div class="project">
+        <div id="starpro" class="project" style="border-radius: 15px 0 0 0">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+            <div id="starwars" class="projimg" style="border-radius: 15px 0 0 0"><div class="projcover" style="border-radius: 15px 0 0 0"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
           <h1 class="pronam">Star Wars Planets</h1>
         </div>
-        <div class="project">
+        <div id="subpro" class="project">
           <a href="http://138.68.60.37:8083">
             <div id="subaru" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
           <h1 class="pronam">Subaru Clone</h1>
         </div>
-        <div class="project">
+        <div id="rockpro" class="project" style="border-radius: 0 15px 0 0">
           <a href="http://138.68.60.37:8081">
-            <div id="rockshowZ" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+            <div id="rockshowZ" class="projimg" style="border-radius: 0 15px 0 0"><div class="projcover" style="border-radius: 0 15px 0 0"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
           <h1 class="pronam">RockshowZ</h1>
         </div>
       </div>
