--- a/styles/styles.css
+++ b/styles/styles.css
@@ -105,7 +105,7 @@
   }
 
   #top {
-    height: 80vh;
+    height: 725px;
     width: 100%;
     background-image: url("./imgs/timp1.jpg");
     background-size: cover;
@@ -132,7 +132,7 @@
   }
 
   #about {
-    height: 40vh;
+    height: 400px;
     width: 100%;
     background-color: #404040;
     color: black;
@@ -185,7 +185,7 @@
   }
 
   #skills {
-    height: 55vh;
+    height: 625px;
     width: 100%;
     background-color: white;
     color: black;
@@ -235,7 +235,7 @@
   }
 
   #projects {
-    height: 80vh;
+    height: 700px;
     width: 100%;
     position: relative;
     background-image: url("./imgs/Mount_Timpanogos.jpg");
