--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -45,8 +45,7 @@
     height: 75px;
     width: 200px;
     position: absolute;
-    left: 100px;
-    display: flex;
+    left: 0px;
   }
 
   .home h1 {
@@ -55,7 +54,7 @@
     font-family: sans-serif;
     font-size: 16px;
     font-weight: bold;
-    text-align: center;
+    text-align: left;
     color: white;
     transition: color 2s
   }
@@ -69,9 +68,9 @@
     height: 75px;
     width: 400px;
     position: absolute;
-    right: 100px;
     display: flex;
     text-align: center;
+    right: 0;
   }
 
   .headeritem {
@@ -92,7 +91,7 @@
     font-size: 16px;
     font-weight: bold;
     color: white;
-    text-align: center;
+    text-align: right;
     transition: color 2s
   }
 
@@ -347,7 +346,6 @@
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid black;
   }
 
   .contcon {
@@ -361,8 +359,7 @@
     border-radius: 15px;
     opacity: .9;
     justify-content: center;
-    color: black;
-    border: 1px solid black;
+    border: none;
   }
 
   .det {
