--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 800px) {
+@media (max-width: 800px) {
   html {
     height: 2000px;
     width: 100%;
@@ -8,7 +8,7 @@
     padding: 0;
   }
 
-  nav {
+  header {
     height: 65px;
     width: 100%;
     background-color: white;
@@ -16,7 +16,6 @@
     z-index: 1;
     border-bottom: .5px solid white;
     color: none;
-    /*opacity: 0;*/
   }
 
   a:hover {
@@ -35,7 +34,7 @@
   }
 
   .titles {
-    font-size: 50px;
+    font-size: 2em;
     text-align: center;
     display: table-cell;
     vertical-align: middle;
@@ -43,7 +42,7 @@
 
   .home {
     height: 75px;
-    width: 200px;
+    width: 75px;
     position: absolute;
     left: 0px;
   }
@@ -54,7 +53,6 @@
     font-family: sans-serif;
     font-size: 16px;
     font-weight: bold;
-    text-align: left;
     color: white;
     transition: color 2s
   }
@@ -66,11 +64,11 @@
 
   .headeritems {
     height: 75px;
-    width: 400px;
+    width: 225px;
     position: absolute;
     display: flex;
     text-align: center;
-    right: 0;
+    right: 10px;
   }
 
   .headeritem {
@@ -79,8 +77,7 @@
     position: relative;
     display: flex;
     flex-direction: row;
-    margin: auto auto;
-    text-align: center;
+    margin: auto;
   }
 
   .headeritem h2 {
@@ -88,11 +85,12 @@
     width: auto;
     margin: auto;
     font-family: sans-serif;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     color: white;
     text-align: right;
-    transition: color 2s
+    transition: color 2s;
+    right: 0
   }
 
   .headeritem h2:hover {
@@ -113,7 +111,7 @@
 
   .namepos h1 {
     width: 80%;
-    margin: auto;
+    font-size: 1.5em;
   }
 
   .namepos {
@@ -144,12 +142,10 @@
   }
 
   .aboutcon {
-    height: 33%;
+    height: 55%;
     width: 100%;
     background: white;
-    /*border-radius: 15px;*/
     font-size: 20px;
-    /*margin: auto;*/
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -159,7 +155,7 @@
 
   .aboutcon p {
     height: 20px;
-    width: 450px;
+    width: 90%;
     top: -5px;
     margin: auto;
     position: relative;
@@ -183,7 +179,7 @@
   }
 
   #skills {
-    height: 55vh;
+    height: 60vh;
     width: 100%;
     background-color: white;
     color: black;
@@ -213,7 +209,7 @@
     display: flex;
     color: white;
     flex-direction: row;
-    margin: 20px 15px;
+    margin: 15px 15px;
   }
 
   .skillsbox ul:hover {
@@ -223,7 +219,7 @@
   }
 
   i {
-    font-size: 50px;
+    font-size: 25px;
     margin: auto;
   }
 
@@ -267,9 +263,8 @@
   }
 
   .projcon {
-    height: 675px;
+    height: 600px;
     width: 100%;
-    top: 15px;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -338,7 +333,7 @@
   }
 
   #contact {
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     position: relative;
     background-color: white;
@@ -351,6 +346,7 @@
   .contcon {
     height: auto;
     width: 100%;
+    top: 25px;
     padding: 50px;
     margin: auto;
     display: flex;
