--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,7 @@
       <div class="namepos">
         <h1>Sergio Barker</h1>
         <h1><hr></h1>
-        <h1>Web Devloper</h1>
+        <h1>Web Developer</h1>
       </div>
     </div>
     <div id="about" class="sec1 sec">
