--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -223,6 +223,12 @@
     background-color: none;
   }
 
+  .skillsbox ul:active {
+    transform: rotateY(360deg);
+    transition-duration: 1s;
+    background-color: none;
+  }
+
   i {
     font-size: 50px;
     margin: auto;
