--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -218,6 +218,12 @@
     background-color: none;
   }
 
+  .skillsbox ul:active {
+    transform: rotateY(360deg);
+    transition-duration: 1s;
+    background-color: none;
+  }
+
   i {
     font-size: 25px;
     margin: auto;
