--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,11 +43,13 @@
   }
 
   .home {
-    height: 75px;
-    width: 200px;
+    height: 40px;
+    top: 10px;
+    width: 100px;
     position: absolute;
     left: 100px;
     display: flex;
+    border-right: solid 1px white;
   }
 
   .home h1 {
@@ -76,7 +78,8 @@
   }
 
   .headeritem {
-    height: 15px;
+    height: 25px;
+    /*border-right: 1px solid white;*/
     width: 75px;
     position: relative;
     display: flex;
